--- a/table.html
+++ b/table.html
@@ -180,6 +180,7 @@ $(document).ready(function(){
 			$('#modal').css('top', function(){
 				return $(window).scrollTop() + 100;
 			});
+			$('#modal').fadeIn();
 			//Set #overlay height to cover whole document
 			$('#overlay').css('height', function (){
 				return $(document).height();
@@ -188,13 +189,18 @@ $(document).ready(function(){
 		});
 		$('#closeModal').click(function(){
 			$('#overlay').fadeOut();
+			$('#modal').fadeOut();
 		});
 		$(document).keyup(function(e) {
 	  		if (e.keyCode == KEYCODE_ESC) { $('#closeModal').click(); } 
 		});
+		$('#overlay').click(function(){
+			$('#closeModal').click();
+		});
 	};
 
 	//Launch modals on anchor clicks
+	launchModal('.greenVelvetMore', "#greenVelvetText");
 	launchModal('.shippingPolicy', '#shippingPolicyText');
 	launchModal('.exchangeReturns', '#exchangeReturnsText');
 	launchModal('.aboutManufacturer', '#aboutManufacturerText');
@@ -241,9 +247,6 @@ $(document).ready(function(){
 		scrollToTarget(anchor,target);
 	});
 
-
-//Scroll to Sizes on #FindYourSize click
-	scrollToTarget($('#findYourSize'),$('#sizes'));
 
 //Sticky navigation function 
 	var stickyNavTop = $('nav').offset().top;  
@@ -430,9 +433,6 @@ $(document).ready(function(){
 			<header>
 				<h2>Bigger bust and slimmer chest?</h2>
 				<h1>Fabulous Fit in Over 65 Sizes!</h1>
-				<!-- <div class="middleWrap"><h1>Big bust?</h1></div>
-				<div class="middle"><a href="#sizes" id="findYourSize"><img src="img/css/button1.png"></a></div>
-				<div class="middleWrap"><h1>Small bust?</h1></div> -->
 			</header>
 			<div class="inner">
 				<div class="grid1 braThumb">
@@ -484,11 +484,35 @@ $(document).ready(function(){
 				</div>
 
 				<div class="grid1 braThumb">
-					<img src="img/bras/jasmine.png">
+					<img src="img/bras/green-velvet.png" class="greenVelvetMore">
 					<figcaption>
-						<h3>Jasmine</h3>
-						<small>$40 | <a href="#">view &#65515;</a></small>
+						<h3>Green Velvet</h3>
+						<small>$40 | <a href="#" class="greenVelvetMore">view &#65515;</a></small>
 					</figcaption>
+					<div id="greenVelvetText" class="nodisplay">
+						<figure class="grid4-6 singleItemFigure">
+							<img src="img/bras/green-velvet-big.jpg">
+						</figure>
+						<div class="singleItemDescription grid2-6">
+							<div class="wrapper">
+								<h2>Green Velvet | $65</h2>
+								<a href="//pinterest.com/pin/create/button/?url=http%3A%2F%2Fwellfitting.com&media=http%3A%2F%2Fwellfitting.com%2Fimg%2Fbras%2Fthis.jpg&description=Bra" data-pin-do="buttonPin" data-pin-config="none"><img src="//assets.pinterest.com/images/pidgets/pin_it_button.png" /></a>
+								<p>Fans of green lingerie will love this unique deep green plunge bra! Floral velvet flocking continues all the way around the band, and the cups are lightly lined with a soft green padding.
+								<ul>
+									<li>Floral velvet embroidery over ultra light tulle netting</li>
+									<li>Velvet ribbon between cups</li>
+									<li>Inner cotton lining</li>
+									<li>Fully adjustable straps</li>
+									<li>3-hook fastening</li>
+									<li>Matching thongs</li>
+								</ul>
+							</div>
+							<div class="singleItemThumbs">
+								<img src="img/bras/green-velvet-thumb1.jpg" class="grid1-6">
+								<img src="img/bras/green-velvet-thumb2.jpg" class="grid1-6 noMarginRight">
+							</div>
+						</div>
+					</div>
 				</div>
 
 				<div class="grid1 braThumb">
@@ -588,7 +612,7 @@ $(document).ready(function(){
 				<div class="grid2-6">
 					<span class="icon shipping"></span>
 					<h2>Shipping & Delivery Times</h2>
-					<p>Free shipping with your home country postal service all over the US, Canada and Europe.</p>
+					<p>We ship directly from the manufacturer with your home country postal service, all over the US, Canada and Europe.</p>
 					<p><a href="" class="shippingPolicy">full shipping policy</a></p>
 
 					<div id="shippingPolicyText" class="nodisplay">
@@ -820,10 +844,11 @@ $(document).ready(function(){
 	</div><!--#container-->
 
 	<!--OVERLAY-->
-	<div id="overlay">
-		<div id="modal" class="">
-			<a id="closeModal">close | x</a>	
-			<div class="inner"></div>
+	<div id="overlay"></div>
+	<div id="modal" class="">
+		<a id="closeModal">close | x |</a>	
+		<div class="inner grid6">
+		<!--remove later-->
 		</div>
 	</div>
 
