calculate size button in a separate wrapper

--- a/table.html
+++ b/table.html
@@ -584,11 +584,23 @@ $(document).ready(function(){
 						</form>
 					</div>
 				</div>
-				<button id="calculateSize" class="button-huge" >Calculate Your Size!</button>
 			</div>
-			<div class="grid4 calculateSizeSection">
-				<h1><div id="sizeSuggestion"></div></h1>
+
+			<div class="sizeSuggestionWrapper">
 				<div class="inner">
+					<div class="grid3">
+						<h1><div id="sizeSuggestion"></div></h1>
+					</div>
+					<div class="grid1">
+						<button id="calculateSize" class="button-huge" >Calculate Your Size!</button>
+					</div>
+				</div>
+			</div>
+
+			<div class="grid4 calculateSizeSection">
+				<div class="inner">
+					
+					
 					<div class="grid4">
 						<div id="sizeTable">
 							<h2>Our Size Chart</h2>
