table label changed

--- a/table.html
+++ b/table.html
@@ -604,7 +604,7 @@ $(document).ready(function(){
 					</div>
 					<div class="grid3">
 						<div id="sizeTable">
-							<small>Highlight a size to see exact measurements</small>
+							<i>Highlight a size to see exact measurements</i>
 						</div>
 					</div>
 				</div>
