--- a/table.html
+++ b/table.html
@@ -454,7 +454,7 @@ $(document).ready(function(){
 		<section class="grid4" id="mainGallery">
 			<header>
 				<h2>Bigger bust and slimmer chest?</h2>
-				<h1>Fabulous Fit in Over 65 Sizes!</h1>
+				<h1>Fabulous Fit Up to N Cup</h1>
 			</header>
 			<div class="inner">
 				{% for bra in site.posts %}
