update on table

--- a/table.html
+++ b/table.html
@@ -447,7 +447,7 @@ $(document).ready(function(){
 				<a class="grid1-6" href="#about" id="toAbout">need advice?</a>
 			</div>
 				<div class="navSocial">
-					<div class="fb-like" data-href="http://facebook.com/wellfitting" data-send="false" data-layout="button_count" data-show-faces="true" data-colorscheme="dark">
+					<div class="fb-like" data-href="http://facebook.com/wellfitting" data-send="false" data-layout="button_count" data-show-faces="true" data-colorscheme="light">
 				</div>
 			</div>	
 		</nav>
