Girls photoshopped, added functionality for main gallery

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@ $(document).ready(function(){
 			<div class="inner">
 				{% for bra in site.posts %}
 				<div class="grid1 braThumb">
-					<img src="{{bra.main-thumb}}" class="{{bra.camelCase}}More">
+					<img href="#" src="{{bra.main-thumb}}" class="{{bra.camelCase}}More">
 					<figcaption>
 						<h3>{{bra.title}}</h3>
 						<small>${{bra.price}} | <a href="#" class="{{bra.camelCase}}More">view &#65515;</a></small>
