--- a/index.html
+++ b/index.html
@@ -349,14 +349,14 @@ $(document).ready(function(){
 			var message = "Your band is " +suggestion.band + ", but we don't carry your cup:(" 
 			$('#sizeSuggestion').html('' + message + '');
 			$("#sizeSuggestion").show();
-			$('.sizeSuggestionWrapper').css("background", "#EEFF00");
+			$('.sizeSuggestionWrapper').css("background", "#7EFFE0");
 			return false;
 		}
 		else {
 			var message = "Try size " + suggestion.band.toString() + suggestion.cup.toString().toUpperCase() + "!";
 			$('#sizeSuggestion').html('' + message);
 			$("#sizeSuggestion").fadeIn(500);
-			$('.sizeSuggestionWrapper').css("background", "#EEFF00");
+			$('.sizeSuggestionWrapper').css("background", "#7EFFE0");
 			//Highlight recommended size in a table
 			var highlighted = suggestion.band.toString()+suggestion.cup.toString();
 		    $('td[data-size="' + highlighted + '"]').addClass('highlighted');
