new pictures for real photos

--- a/index.html
+++ b/index.html
@@ -471,9 +471,10 @@ $(document).ready(function(){
 						<div class="singleItemDescription grid2-6">
 							<div class="wrapper">
 								<h2> {{bra.title}} | ${{bra.price}}</h2>
-								<a href="//pinterest.com/pin/create/button/?url={{site.url | cgi_escape}}&media={{site.url | cgi_escape}}{{bra.big-thumb | cgi_escape }}&description={{bra.tagline | cgi_escape}}" data-pin-do="buttonPin" data-pin-config="above"><img src="//assets.pinterest.com/images/pidgets/pin_it_button.png" /></a>
+								<img src="//assets.pinterest.com/images/pidgets/pin_it_button.png" /></a>
 								{{bra.content}}
 							</div>
+							{{site.url}}
 							<div class="singleItemThumbs">
 								<img src="{{bra.small-thumb-1}}" class="grid1-6">
 								<img src="{{bra.small-thumb-2}}" class="grid1-6 noMarginRight">
@@ -594,7 +595,7 @@ $(document).ready(function(){
 				<div class="grid2-6">
 					<span class="icon shipping"></span>
 					<h2>Shipping & Delivery Times</h2>
-					<p>We offer shipping to the US and Canada through registered mail with your home country postal service. Your bra will be handcrafted for you by the ma, ship directly from the manufacturer with your home country postal service, all over the US, Canada and Europe.</p>
+					<p>We offer shipping to the US and Canada through registered mail with your home country postal service. Your bra will be handcrafted for you, shipped directly from the manufacturer with your home country postal service, all over the US, Canada and Europe.</p>
 					<p><a href="" class="shippingPolicy">full shipping policy</a></p>
 
 					<div id="shippingPolicyText" class="nodisplay">
@@ -638,12 +639,12 @@ $(document).ready(function(){
 					<img src="img/css/spectacular-uplift.png">
 				</div>
 				<div class="grid1 square">
-					<img src="img/34f-review2.jpg">
+					<img src="img/36f-review.jpg">
 					<div class="caption">
-						<h2>34F</h2>
+						<h2>36F</h2>
 						<p>
-							underbust: 30.3in <br>
-							overbust: 37in
+							underbust: 31.1in <br>
+							overbust: 39.8in
 						</p>
 					</div>
 				</div>
@@ -657,16 +658,7 @@ $(document).ready(function(){
 						</p>
 					</div>
 				</div>
-				<div class="grid1 square">
-					<img src="img/34f-review3.jpg">
-					<div class="caption">
-						<h2>34FF</h2>
-						<p>
-							underbust: 28.7in <br>
-							overbust: 37.8in
-						</p>
-					</div>
-				</div>
+
 				<div class="grid1 square">
 					<a href="http://balkonetka.pl/katalog/bra/comexim-geisha-8">
 						<img src="img/30e-review.jpg">
@@ -696,6 +688,16 @@ $(document).ready(function(){
 						<p>
 							underbust: 28.2in <br>
 							overbust: 39in
+						</p>
+					</div>
+				</div>
+								<div class="grid1 square">
+					<img src="img/34f-review3.jpg">
+					<div class="caption">
+						<h2>34FF</h2>
+						<p>
+							underbust: 28.7in <br>
+							overbust: 37.8in
 						</p>
 					</div>
 				</div>
