added mailchimp form

--- a/index.html
+++ b/index.html
@@ -474,7 +474,6 @@ $(document).ready(function(){
 								<img src="//assets.pinterest.com/images/pidgets/pin_it_button.png" /></a>
 								{{bra.content}}
 							</div>
-							{{site.url}}
 							<div class="singleItemThumbs">
 								<img src="{{bra.small-thumb-1}}" class="grid1-6">
 								<img src="{{bra.small-thumb-2}}" class="grid1-6 noMarginRight">
@@ -796,6 +795,32 @@ $(document).ready(function(){
 
 					<img src="img/signature.png" width="260px">
 				</div>
+			</div>
+		</section>
+		<section class="grid4" id="mailingList">
+			<header>
+				<h2>Want to help women of all shapes and sizes discover perfect lingerie?</h2>
+				<p>Join our Mailing List and be among the first ones to access our community and special deals and offers!</p>
+			</header>
+			<div class="inner">
+				<!-- Begin MailChimp Signup Form -->
+				<div id="mc_embed_signup">
+				<form action="http://wellfitting.us4.list-manage.com/subscribe/post?u=1dc5a2a00aab26500b4caacdd&amp;id=8c4e1f1c99" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+					<div class="mc-field-group">
+						<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Your Email">
+					</div>
+					<div class="mc-field-group">
+						<input type="text" value="" name="FNAME" class="" id="mce-FNAME" placeholder="Your First Name">
+					</div>
+					<div id="mce-responses" class="clear">
+						<div class="response" id="mce-error-response" style="display:none"></div>
+						<div class="response" id="mce-success-response" style="display:none"></div>
+					</div>
+					<button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button button-huge">Join the Movement!</button>	
+					
+				</form>
+				</div>
+				<!--End mc_embed_signup-->
 			</div>
 		</section>
 
