changed color of overlay, conrast on image hovers

--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ function fractionalize(num){
 							<label>Your overbust:</label>
 							<div class="grid2">
 							<small class="sliderLeftLabel">29</small>
-							<small class="sliderRightLabel">46.5</small>
+							<small class="sliderRightLabel">46½</small>
 							<div id="overbust" class="slider"></div>
 						</div>
 							<span id="overbustLabel" class="sliderLabel grid1"></span>
@@ -676,12 +676,7 @@ function fractionalize(num){
 					<div id="aboutManufacturerText" class="nodisplay">
 						<div id="manufacturerPic"></div>
 						<h1 class="iconHeader manufacturer">About the Manufacturer</h1>
-<<<<<<< HEAD
-
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-=======
-						<p></p>
->>>>>>> 0442ef1e6120988bc14f32de3d2e9edb6b2641ec
+						<p>We are working with Comexim Company to bring you the highest quality, handcrafted bras</p>
 					</div>
 				</div>
 			</div>
