--- a/thankyou.html
+++ b/thankyou.html
@@ -10,38 +10,50 @@
   	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
   	<link href='http://fonts.googleapis.com/css?family=Clicker+Script|EB+Garamond' rel='stylesheet' type='text/css'>
   	<link href='http://fonts.googleapis.com/css?family=Lato:300,700,300italic' rel='stylesheet' type='text/css'>  
+  	<script type="text/javascript">
+(function(d){
+  var f = d.getElementsByTagName('SCRIPT')[0], p = d.createElement('SCRIPT');
+  p.type = 'text/javascript';
+  p.async = true;
+  p.src = '//assets.pinterest.com/js/pinit.js';
+  f.parentNode.insertBefore(p, f);
+}(document));
+</script>
 </head>
 
 <body>
-	<div id="container">
-		<!-- thank you section -->
-		<section id="thankYou" class="grid4">
-		<div class="alignCenter">	
-			
-			<h2>Now check your mailbox, we sent you an email to confirm your subscription.</h2>
-			<h1>Thank You For Subscribing!</h1>
-			<a href="index.html" class="button-huge">Back to the site</a>
-		</div>
-		</section>
+<!-- fb like plugin -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=593381654006218";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<!-- end of like -->
+
 	
+		<!-- thank you section -->
+		<section id="thankYou">
 
-		<!-- footer -->
+		<div id="instagramGallery" class="inner">
+			<iframe src="http://snapwidget.com/in/?u=d2VsbGZpdHRpbmd8aW58MjE1fDR8MXxGQ0Y5RkF8bm98NXxmYWRlT3V0fG9uU3RhcnR8eWVz&v=6913" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:880px; height: 220px" ></iframe>
 
-		<footer class="">
+
+		</div>
+
+
+		<header>
+			<img src="/img/logo-mono-on-light.png">	
+			<h2>Thank you for subscribing!<br>Now check your mailbox, we sent you an email to confirm your subscription.</h2>
+			<a href="index.html" class="button-huge">Back to the Store</a>
+			
+		</header>
+		<footer>
 			<div class="inner">
-				<div class="grid2-6">
-					<h3>Terms of Service</h3>
-					<ul>
-						<li><a href="#" class="shippingPolicy">Shipping Policy</a></li>
-						<li><a href="#" class="exchangeReturns">Returns & Exchange</a></li>
-					</ul>
-				</div>
-				<div class="grid2-6">
-					<h3>About</h3>
-					<ul>
-						<li><a href="#" class="aboutManufacturer">About the Manufacturer</a></li>
-						<li><a href="mailto:hello@wellfitting.com">Contact Us!</a></li>
-					</ul>
+				<div class="grid4-6">
+					<div class="fb-like" data-href="http://facebook.com/wellfitting" data-width="640" data-show-faces="true" data-send="false"></div>
 				</div>
 				<div class="grid2-6 socialIcons">
 					<a href="http://www.facebook.com/wellfitting" class="fb" target="_blank" title="Facebook"><span class="nodisplay">Wellfitting on Facebook</span></a>
@@ -49,9 +61,10 @@
 					<a href="http://pinterest.com/wellfitting/" class="pinterest" target="_blank" title="Pinterest"><span class="nodisplay">Wellfitting on Pinterest</span></a>
 					<a href="http://instagram.com/wellfitting" class="instagram" target="_blank" title="Instagram"><span class="nodisplay">Wellfitting on Instagram</span></a>	
 				</div>
-				<div class="grid4 center copyright"><small>&copy; Wellfitting Inc. 2013</small></div>
 			</div>
-			
 		</footer>
-	</div>	
+		</section>
+		
+	
+</body>
 </html>
