Thank You ready

--- a/thankyou.html
+++ b/thankyou.html
@@ -10,15 +10,7 @@
   	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
   	<link href='http://fonts.googleapis.com/css?family=Clicker+Script|EB+Garamond' rel='stylesheet' type='text/css'>
   	<link href='http://fonts.googleapis.com/css?family=Lato:300,700,300italic' rel='stylesheet' type='text/css'>  
-  	<script type="text/javascript">
-(function(d){
-  var f = d.getElementsByTagName('SCRIPT')[0], p = d.createElement('SCRIPT');
-  p.type = 'text/javascript';
-  p.async = true;
-  p.src = '//assets.pinterest.com/js/pinit.js';
-  f.parentNode.insertBefore(p, f);
-}(document));
-</script>
+  	
 </head>
 
 <body>
@@ -36,33 +28,26 @@
 	
 		<!-- thank you section -->
 		<section id="thankYou">
-
-		<div id="instagramGallery" class="inner">
-			<iframe src="http://snapwidget.com/in/?u=d2VsbGZpdHRpbmd8aW58MjE1fDR8MXxGQ0Y5RkF8bm98NXxmYWRlT3V0fG9uU3RhcnR8eWVz&v=6913" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:880px; height: 220px" ></iframe>
-
-
-		</div>
-
-
+			<script src="https://d36hc0p18k1aoc.cloudfront.net/public/js/modules/tintembed.js"></script><div class="tintup" data-id="wellfitting-1378417672" data-columns="8"  style="height:220px;width:100%;"><a href="http://www.tintup.com/blog/the-best-facebook-widget" style="width:118px;height:31px;background-image:url(//d33w9bm0n1egwm.cloudfront.net/assets/logos/poweredbytintsmall.png);position:absolute;bottom:10px;right: 20px;text-indent: -9999px;z-index:9;">facebook on website</a></div>
+		
 		<header>
 			<img src="/img/logo-mono-on-light.png">	
 			<h2>Thank you for subscribing!<br>Now check your mailbox, we sent you an email to confirm your subscription.</h2>
 			<a href="index.html" class="button-huge">Back to the Store</a>
 			
+			
+			</div>
 		</header>
-		<footer>
-			<div class="inner">
+		<div id="thankYoufooter" class="inner">
 				<div class="grid4-6">
 					<div class="fb-like" data-href="http://facebook.com/wellfitting" data-width="640" data-show-faces="true" data-send="false"></div>
 				</div>
-				<div class="grid2-6 socialIcons">
+				<div  class="grid2-6 socialIcons">
 					<a href="http://www.facebook.com/wellfitting" class="fb" target="_blank" title="Facebook"><span class="nodisplay">Wellfitting on Facebook</span></a>
 					<a href="https://twitter.com/wellfitting" class="twitter" target="_blank" title="Twitter"><span class="nodisplay">Wellfitting on Twitter</span></a>
 					<a href="http://pinterest.com/wellfitting/" class="pinterest" target="_blank" title="Pinterest"><span class="nodisplay">Wellfitting on Pinterest</span></a>
 					<a href="http://instagram.com/wellfitting" class="instagram" target="_blank" title="Instagram"><span class="nodisplay">Wellfitting on Instagram</span></a>	
 				</div>
-			</div>
-		</footer>
 		</section>
 		
 	
