--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
   	<link href='http://fonts.googleapis.com/css?family=Clicker+Script|EB+Garamond' rel='stylesheet' type='text/css'>
   	<link href='http://fonts.googleapis.com/css?family=Lato:300,700,300italic' rel='stylesheet' type='text/css'>  
+  	<script src="js/simpleCart.js" type="text/javascript"></script>
+
     <script type="text/javascript">
     //Bands and cups, measurements in centimeters
 var bands = [
@@ -275,7 +277,8 @@ $(document).ready(function(){
 		'.kellyMore': '#kellyText',
 		'.shippingPolicy': '#shippingPolicyText',
 		'.exchangeReturns': '#exchangeReturnsText',
-		'.aboutManufacturer': '#aboutManufacturerText'
+		'.aboutManufacturer': '#aboutManufacturerText',
+		'.orderNow': '#orderForm'
 	}, function( anchor, content ) {
   		launchModal(anchor, content);
 	});
@@ -470,11 +473,31 @@ $(document).ready(function(){
 	    $( "#overbustLabel" ).html(fractionalize($( "#overbust" ).slider( "value" )) + '<span> in</span>' );
 	});
 });
+
+//Playing with Simple Cart
+simpleCart({
+	 cartColumns: [
+        { attr: "name", label: "Name"},
+        { attr: "size", label: "Size"},
+        { view: "currency", attr: "price", label: "Price"},
+        { view: "decrement", label: true},
+        { attr: "quantity", label: "Qty"},
+        { view: "increment", label: true},
+        { view: "currency", attr: "total", label: "SubTotal" },
+        { view: "remove", text: "Remove", label: true}
+    ],
+    cartStyle: "div", 
+    checkout: {
+      type: "PayPal",
+      email: "amelia@wellfitting.com"
+    }
+});
+
     </script>
 
 </head>
 
-<body>
+<bo++>
 	<!--Facebook -->
 	<div id="fb-root"></div>
 	<script>(function(d, s, id) {
@@ -514,12 +537,28 @@ $(document).ready(function(){
 				<h1>Fabulous Fit Up to N Cup!</h1>
 			</header>
 			<div class="inner">
+				<div class="cart">
+					Shooping cart
+					Cart items:<div class="simpleCart_items"></div>
+					Cart Total: <span class="simpleCart_total"></span>
+					<a href="javascript:;" class="simpleCart_checkout">Checkout</a>
+					<br>-------
+				</div>
 				{% for bra in site.posts %}
-				<div class="grid1 braThumb">
+				<div class="grid1 braThumb simpleCart_shelfItem">
 					<img href="#" src="{{bra.main-thumb}}" class="{{bra.camelCase}}More">
 					<figcaption>
-						<h3>{{bra.title}}</h3>
-						<small>${{bra.bra-price}} | <a href="#" class="{{bra.camelCase}}More">view &#65515;</a></small>
+						<h3 class="item_name">{{bra.title}}</h3>
+						<small>
+							<span class="item_price">${{bra.bra-price}}</span> | 
+							<a href="#" class="{{bra.camelCase}}More">view &#65515;</a> | 
+							<a class="item_add" href="javascript:;"> Add to Cart </a>
+						</small>
+						 <select class="item_size">
+        					<option value="Small"> Small </option>
+					        <option value="Medium"> Medium </option>
+					        <option value="Large"> Large </option>
+					    </select>
 					</figcaption>
 					<div id="{{bra.camelCase}}Text" class="nodisplay">
 						<figure class="grid4-6 singleItemFigure">
@@ -642,14 +681,37 @@ $(document).ready(function(){
 			<header>
 				<h2>Accepting orders only until September 30 2013!</h2>
 				<h1>Order Your Bras Today!</h1>
-				<button class="button-huge">
+				<button class="button-huge orderNow">
 					<div>Buy Now
-					<br>
-					<small>&hearts; 100% Satisfaction Guaranteed &hearts;</small>
-				</div>
-			</button>
+						<br>
+						<small>&hearts; 100% Satisfaction Guaranteed &hearts;</small>
+					</div>
+				</button>
+				<div id="orderForm">
+					<h1>Order your Wellfitting Bras Today!</h1>
+					<div class="grid2">
+						<h2>Let us know which bras you would like to order:</h2>
+						<ul class="orderGallery">
+							{% for bra in site.posts %}
+							<li>
+								<img src="{{bra.main-thumb}}" class="miniThumb">
+								<div class="caption">
+									<h3>{{bra.title}}</h3>
+									Bra: ${{bra.bra-price}}<br>
+									Bottoms: ${{bra.bottoms-price}}
+								</div>
+							</li>
+							{% endfor %}
+						</ul>
+						
+						<img src="https://www.paypalobjects.com/webstatic/mktg/logo/AM_mc_vs_dc_ae.jpg" border="0" alt="PayPal Acceptance Mark"></a>
 
-				</header>
+					</div> 
+					<div class="grid2">
+						<iframe id="orderIframe" name="iframe1" src="https://docs.google.com/forms/d/1sJCBs4w3WTIDbmZbbHEj3vXVYvpxtfwOeuhW9Dsnq0Y/viewform?embedded=true" width="460" height="1075" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+					</div>
+				</div>
+			</header>
 			<div class="inner">
 				<div class="grid2-6">
 					<span class="icon shipping"></span>
@@ -964,6 +1026,7 @@ $(document).ready(function(){
 		<a id="closeModal">close | x |</a>	
 		<div class="inner grid6">
 		<!--remove later-->
+		<!---->
 		</div>
 	</div>
 
