--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>    
 	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
   	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-  	<link href='http://fonts.googleapis.com/css?family=Clicker+Script|EB+Garamond' rel='stylesheet' type='text/css'>
   	<link href='http://fonts.googleapis.com/css?family=Lato:300,700,300italic' rel='stylesheet' type='text/css'>  
   	<script src="js/simpleCart.js" type="text/javascript"></script>
 
@@ -168,6 +167,20 @@ var bands = [
 	    	]
 
 // assert: bands is sorted by start.
+
+//Build a list of all possible bra sizes
+var braSizes = []
+for (var i = 0; i < bands.length; i++) {
+	var band = bands[i];
+	var bandValue = band.value;
+	for (var j = 0; j < band.cups.length; j++) {
+		var cup = band.cups[j].value;
+		braSizes.push(bandValue+cup);
+	};
+};
+
+//List of bottoms sizes
+var bottomsSizes = ["S", "M", "L", "XL", "XXL"]
 
 // cmToInch converts centimeter to inch with accuracy to .2
 var cmToInch = function(num){
@@ -472,24 +485,42 @@ $(document).ready(function(){
 	    });
 	    $( "#overbustLabel" ).html(fractionalize($( "#overbust" ).slider( "value" )) + '<span> in</span>' );
 	});
+
+	//Shopping cart functions
+	//Add size selection dropdowns to bra:
+	for (var i = 0; i <braSizes.length; i++) {
+		var size = braSizes[i];
+		$('.bra .item_size').append('<option value="'+size+'">'+size+'</option>');
+	};
+
+	//Add size selection to bottoms:
+	for (var i = 0; i <bottomsSizes.length; i++) {
+		var size = bottomsSizes[i];
+		$('.bottoms .item_size').append('<option value="'+size+'">'+size+'</option>');
+	};
 });
 
-//Playing with Simple Cart
+
+
+
+//Initialize simpleCart.js
 simpleCart({
 	 cartColumns: [
         { attr: "name", label: "Name"},
         { attr: "size", label: "Size"},
         { view: "currency", attr: "price", label: "Price"},
-        { view: "decrement", label: true},
+        { view: "decrement", label: false},
         { attr: "quantity", label: "Qty"},
-        { view: "increment", label: true},
+        { view: "increment", label: false},
         { view: "currency", attr: "total", label: "SubTotal" },
         { view: "remove", text: "Remove", label: true}
     ],
-    cartStyle: "div", 
+    cartStyle: "table", 
     checkout: {
-      type: "PayPal",
-      email: "amelia@wellfitting.com"
+    	type: "SendForm" , 
+        url: "http://babbage.local/checkout" ,
+        // http method for form, "POST" or "GET", default is "POST"
+        method: "POST" , 
     }
 });
 
@@ -497,7 +528,7 @@ simpleCart({
 
 </head>
 
-<bo++>
+<body>
 	<!--Facebook -->
 	<div id="fb-root"></div>
 	<script>(function(d, s, id) {
@@ -537,28 +568,15 @@ simpleCart({
 				<h1>Fabulous Fit Up to N Cup!</h1>
 			</header>
 			<div class="inner">
-				<div class="cart">
-					Shooping cart
-					Cart items:<div class="simpleCart_items"></div>
-					Cart Total: <span class="simpleCart_total"></span>
-					<a href="javascript:;" class="simpleCart_checkout">Checkout</a>
-					<br>-------
-				</div>
 				{% for bra in site.posts %}
-				<div class="grid1 braThumb simpleCart_shelfItem">
+				<div class="grid1 braThumb">
 					<img href="#" src="{{bra.main-thumb}}" class="{{bra.camelCase}}More">
 					<figcaption>
-						<h3 class="item_name">{{bra.title}}</h3>
+						<h3>{{bra.title}}</h3>
 						<small>
-							<span class="item_price">${{bra.bra-price}}</span> | 
-							<a href="#" class="{{bra.camelCase}}More">view &#65515;</a> | 
-							<a class="item_add" href="javascript:;"> Add to Cart </a>
+							${{bra.bra-price}} | 
+							<a href="#" class="{{bra.camelCase}}More">view &#65515;</a>
 						</small>
-						 <select class="item_size">
-        					<option value="Small"> Small </option>
-					        <option value="Medium"> Medium </option>
-					        <option value="Large"> Large </option>
-					    </select>
 					</figcaption>
 					<div id="{{bra.camelCase}}Text" class="nodisplay">
 						<figure class="grid4-6 singleItemFigure">
@@ -566,12 +584,24 @@ simpleCart({
 						</figure>
 						<div class="singleItemDescription grid2-6">
 							<div class="wrapper">
-								<h2> {{bra.title}} | ${{bra.bra-price}}</h2>
-								
-								<img src="//assets.pinterest.com/images/pidgets/pin_it_button.png" /></a>
-
-								{{bra.content}}
-								<h2>Matching bottoms: ${{bra.bottoms-price}}</h2>
+								<div class="simpleCart_shelfItem bra">
+									<h2> 
+										<span class="item_name">{{bra.title}}</span> | 
+										<span class="item_price">${{bra.bra-price}}</span>
+									</h2>
+									<select class="item_size"></select>
+									<a class="item_add" href="javascript:;"> Add to Cart </a>
+									<img src="//assets.pinterest.com/images/pidgets/pin_it_button.png" /></a>
+									{{bra.content}}
+								</div>
+								<div class="simpleCart_shelfItem bottoms">
+									<h2> 
+										<span class="item_name">{{bra.title}} {{bra.bottoms-type}}</span> | 
+										<span class="item_price">${{bra.bottoms-price}}</span>
+									</h2>
+									<select class="item_size"></select>
+									<a class="item_add" href="javascript:;"> Add to Cart </a>
+								</div>
 							</div>
 							<div class="singleItemThumbs">
 								<img src="{{bra.small-thumb-1}}" class="grid1-6">
@@ -682,12 +712,12 @@ simpleCart({
 			<header>
 				<h2>Accepting orders only until September 30 2013!</h2>
 				<h1>Order Your Bras Today!</h1>
-				<button class="button-huge orderNow">
+				<!-- <button class="button-huge orderNow">
 					<div>Buy Now
 						<br>
 						<small>&hearts; 100% Satisfaction Guaranteed &hearts;</small>
 					</div>
-				</button>
+				</button> -->
 				<div id="orderForm">
 					<h1>Order your Wellfitting Bras Today!</h1>
 					<div class="grid2">
@@ -1017,8 +1047,13 @@ simpleCart({
 				</div>
 				<div class="grid4 center copyright"><small>&copy; Wellfitting Inc. 2013</small></div>
 			</div>
-			
 		</footer>
+		<div id="shoppingCart">
+			<div class="simpleCart_items"></div>
+			Cart Total: <span class="simpleCart_total"></span>
+			<br>
+			<a href="/cart.html">View cart</a>
+		</div>
 	</div><!--#container-->
 
 	<!--OVERLAY-->
