launch product views when real pictures clicked

--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@ simpleCart({
 					<h2 class="nodisplay">Spectacular Uplift in Over 65 Sizes!</h2>
 					<img src="img/css/spectacular-uplift.png">
 				</div>
-				<div class="grid1 square">
+				<div class="grid1 square julietteMore">
 					<img src="img/36f-review.jpg">
 					<div class="caption">
 						<h2>80F</h2>
@@ -845,7 +845,7 @@ simpleCart({
 						</p>
 					</div>
 				</div>
-				<div class="grid1 square">
+				<div class="grid1 square geishaMore">
 					<img src="img/30hh-review.jpg">
 					<div class="caption">
 						<h2>65HH</h2>
@@ -856,7 +856,7 @@ simpleCart({
 					</div>
 				</div>
 
-				<div class="grid1 square">
+				<div class="grid1 square geishaMore">
 					<a href="http://balkonetka.pl/katalog/bra/comexim-geisha-8">
 						<img src="img/30e-review.jpg">
 					</a>
@@ -868,7 +868,7 @@ simpleCart({
 						</p>
 					</div>
 				</div>
-				<div class="grid1 square">
+				<div class="grid1 square julietteMore">
 					<img src="img/34ff-review.jpg">
 					<div class="caption">
 						<h2>75G</h2>
@@ -878,7 +878,7 @@ simpleCart({
 						</p>
 					</div>
 				</div>
-				<div class="grid1 square">
+				<div class="grid1 square mintSorbetMore">
 					<img src="img/32h-review2.jpg">
 					<div class="caption">
 						<h2>70H</h2>
@@ -888,7 +888,7 @@ simpleCart({
 						</p>
 					</div>
 				</div>
-								<div class="grid1 square">
+				<div class="grid1 square summerTimeMore">
 					<img src="img/34f-review3.jpg">
 					<div class="caption">
 						<h2>75G</h2>
