--- a/cart.html
+++ b/cart.html
@@ -5,6 +5,14 @@
 <html>
 <head>
 	<title>Cart</title>
+	<meta charset="utf-8">
+	<link rel="icon" type="image/png" href="img/favicon.png">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>    
+	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+  	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+  	<link href='http://fonts.googleapis.com/css?family=Clicker+Script|EB+Garamond' rel='stylesheet' type='text/css'>
+  	<link href='http://fonts.googleapis.com/css?family=Lato:300,700,300italic' rel='stylesheet' type='text/css'>  
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>    
 	<script src="js/simpleCart.js" type="text/javascript"></script>
@@ -51,39 +59,46 @@ simpleCart.bind('beforeCheckout', function(data) {
 </head>
 
 <body>
-	<div id="shoppingCart">
-		<h1>Ordered items</h1>
-			<div class="simpleCart_items"></div>
-			Cart Total: <span class="simpleCart_total"></span>
-		<h1>Client info</h1>
-		<form>
-			<label>First Name</label>
-			<input type="text" name="firstName" id="#firstName">
+	<section id="shoppingCartFull">
+		<div class="inner">
+			<h1>Ordered items</h1>
+				<div class="simpleCart_items"></div>
+				Cart Total: <span class="simpleCart_total"></span>
+			<div id="clientInfo">
+				<h1>Client info</h1>
+				<form>
+					<div id="clientName" class="grid2-6">
+						<label>First Name</label>
+						<input type="text" name="firstName" id="#firstName">
 
-			<label>Last Name</label>
-			<input type="text" name="lastName" id="lastName">
+						<label>Last Name</label>
+						<input type="text" name="lastName" id="lastName">
 
-			<label>Email</label>
-			<input type="email" name="email" id="email">
+						<label>Email</label>
+						<input type="email" name="email" id="email">
+					</div>
+					<div id="shippingAddress" class="grid2-6">
+						<label>Street Address</label>
+						<input type="text" name="address" id="address">
 
-			<label>Street Address</label>
-			<input type="text" name="address" id="address">
+						<label>City</label>
+						<input type="text" name="city" id="city">
 
-			<label>City</label>
-			<input type="text" name="city" id="city">
+						<label>ZIP</label>
+						<input type="text" name="zip" id="zip">
 
-			<label>ZIP</label>
-			<input type="text" name="zip" id="zip">
+						<label>State/Province</label>
+						<input type="text" name="state" id="state">
 
-			<label>State/Province</label>
-			<input type="text" name="state" id="state">
-
-			<label>Country</label>
-			<input type="text" name="country" id="country">
-		</form>
-			
-		<a href="javascript:;" class="simpleCart_checkout">Checkout</a>
+						<label>Country</label>
+						<input type="text" name="country" id="country">
+					</div>
+				</form>
+				
+				<a href="javascript:;" class="simpleCart_checkout">Checkout</a>
+			</div>
 		</div>
+	</section>
 </body>
 
 </html>
